--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,17 @@
     padding-bottom: 30px;
     padding-top: 20px;
     text-align: center;
-    font-size: 30px;
+    font-size: 15px;
 
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+body {
+    background-color: darkslategray;
+    font-style: normal;
+    color: azure;
 }
 
 .register-container h2 {
@@ -19,25 +25,40 @@
 form {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
     margin: 250px;
 }
 
-input {
+form div {
+
+    align-items: start;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+form input {
     margin-bottom: 50px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    width: 80%;
+    margin: auto;
 }
 
 button {
     padding: 10px;
-    font-size: 16px;
+    font-size: 22px;
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 4px;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     cursor: pointer;
 }
 
