--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,19 @@ body {
     color: azure;
 }
 
+tbody tr {
+    font-size: red;
+    color: crimson;
+}
+
 .register-container h2 {
     text-align: center;
     margin-bottom: 20px;
+}
+
+.input-error {
+    font-size: red;
+    color: crimson;
 }
 
 
